fixed an issue where the nav was not aligned with the side of the website

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ a{
     background-color:#282828 ;
     position:fixed;
     width:170px;
-    margin-left:750px;
+    margin-left:760px;
     top:100px;
     opacity:0.7;
     padding :15px;
